<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Davis Miyashiro
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">WeatherMapApp</string>
    <string name="action_settings">Settings</string>
    <string name="open_weather_map">OpenWeatherMap</string>

    <string name="celsius_label">Celsius (ºC)</string>
    <string name="fahrenheit_label">Fahrenheit (ºF)</string>

    <string name="celsius">ºC</string>
    <string name="fahrenheit">ºF</string>
    <string name="format_temperature">%.1f</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="choose_temperature_unit">Choose a Temperature Unit:</string>

    <string name="please_check_your_network_status_or_try_again_later">Please check your network status or try again later.</string>

</resources>
