...
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="Rain" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
...
